[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "memphis-traffic-generator"
version = "0.0.1"
dependencies = [
    'tqdm',
    'yaspin',
    'joblib',
    'memphis-traffic-analyzer',
    'importlib-metadata; python_version>="3.8"',
]

[project.scripts]
memphis-tg = "memphis_traffic_generator:memphis_tg"
